search api sorts, search repo init, search fix
