# modules/user-svc/src/main/openapi/UserOpenApi.yaml
@@ -252,6 +252,15 @@ paths:
             type: integer
             format: int32
           example: 10
+        - name: sort
+          description: sort
+          in: query
+          required: false
+          schema:
+            type: array
+            items:
+              type: string
+          example: username:asc,email:desc
       responses:
         '200':
           description: successful operation
@@ -259,6 +268,12 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/UserSearchResponse'
+        '400':
+          description: failed operation
+          content:
+            application/json:
+              schema:
+                type: string
 externalDocs:
   description: Find out more about Swagger
   url: 'http://swagger.io'
